# goit-python-web-hw-10

./: pyproject.toml
hw_project/: db.sqlite3
hw_project/app_auth/: urls.py  views.py
hw_project/app_auth/templates/app_auth/: login.html
hw_project/hw_project/: settings.py
hw_project/quotes/templates/quotes/: add_quote.html
