[tool.poetry]
name = "hw10"
version = "0.1.0"
description = ""
authors = ["MatsiukRoman <r.matsuk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1"
pymongo = "^4.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
